; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_vmalloc.c_addr_to_vb_idx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_vmalloc.c_addr_to_vb_idx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VMALLOC_START = common dso_local global i32 0, align 4
@VMAP_BLOCK_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @addr_to_vb_idx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @addr_to_vb_idx(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i32, i32* @VMALLOC_START, align 4
  %4 = load i32, i32* @VMAP_BLOCK_SIZE, align 4
  %5 = sub nsw i32 %4, 1
  %6 = xor i32 %5, -1
  %7 = and i32 %3, %6
  %8 = sext i32 %7 to i64
  %9 = load i64, i64* %2, align 8
  %10 = sub i64 %9, %8
  store i64 %10, i64* %2, align 8
  %11 = load i32, i32* @VMAP_BLOCK_SIZE, align 4
  %12 = sext i32 %11 to i64
  %13 = load i64, i64* %2, align 8
  %14 = udiv i64 %13, %12
  store i64 %14, i64* %2, align 8
  %15 = load i64, i64* %2, align 8
  ret i64 %15
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
